<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_license_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_group_license_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radio_trial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trial" />

                <RadioButton
                    android:id="@+id/radio_nontrial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/non_trial" />

            </RadioGroup>


            <LinearLayout
                android:id="@+id/view_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <RadioGroup
                    android:id="@+id/radio_group_license_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_serial"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/serial_number" />

                    <RadioButton
                        android:id="@+id/radio_license_file"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/license_file" />

                </RadioGroup>

                <EditText
                    android:id="@+id/txt_serialkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEF-"
                    android:drawableEnd="@drawable/ic_vpn_key_black_36dp"
                    android:inputType="textCapCharacters" />

                <LinearLayout
                    android:id="@+id/view_license_file"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_license_file"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="70"
                        android:gravity="center_vertical"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <ImageButton
                        android:id="@+id/btn_browse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_folder_black_36dp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_activate_licenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btn_deactivate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="50"
            android:enabled="false"
            android:text="@string/deactivate" />


        <Button
            android:id="@+id/btn_activate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="50"
            android:text="@string/activate" />
    </LinearLayout>
</LinearLayout>